# identity-runtime

./: .gitignore  ARCHITECTURE_VERIFICATION.md  BROTHERS_WALKTHROUGH.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IDENTITY_EVOLUTION.md  LICENSE  README.md  VERIFICATION_REPORT.md  pyproject.toml  stress_test.py  test_canonical_facts.py  test_identity.py  test_identity_evolution.py  verify_arch.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
adapters/: __init__.py  base.py  groq_adapter.py  openai_adapter.py  openrouter_adapter.py
cli/: main.py
core/: __init__.py  cognitive_engine.py  constitution.py  context_composer.py  evaluation.py  evidence_graph.py  experience.py  fidelity.py  goals.py  health.py  identity.py  identity_facts.py  identity_mutation.py  knowledge.py  memory.py  motivations.py  policies.py  relationships.py  skills.py  timeline.py  user_profile.py
docs/: 01-north-star.md  04-architecture.md  05-mvp.md  ROADMAP.md
examples/: quickstart.py
extension/: content_chatgpt.js  content_grok.js  manifest.json
identity_graph/: graph.py
identityos/: __init__.py  client.py  identity.py
runtime/: context_builder.py  eval_engine.py  event_bus.py  identity_loader.py  main.py  memory_engine.py  orchestrator.py  persistence.py
sdk/: README.md  __init__.py  identity_client.py  identity_object.py
tests/: test_adapters.py  test_cognitive_engine.py  test_e2e_integration.py  test_e2e_persistence.py  test_evaluation.py  test_identity.py  test_memory.py  test_persistence.py  test_relationships.py  test_runtime_pipeline.py
(+111 files in other folders)
