[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "identityos"
version = "2.0.0"
description = "Portable AI identity layer — persistent, composable AI identities for LLM applications."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "IdentityOS Contributors"},
]

requires-python = ">=3.11"
dependencies = [
    "httpx",
]

[project.urls]
Homepage = "https://github.com/lacebx/IdentityOS"
Repository = "https://github.com/lacebx/IdentityOS"

[tool.hatch.build]
include = [
    "identityos/**",
    "core/**",
    "runtime/**",
    "adapters/**",
    "identity_graph/**",
    "cli/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
